# NedoGPT

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  alembic.ini  config.yaml  main.py  pyproject.toml
.github/: FUNDING.yml
bot/: ai_stuff.py  base.py  constants.py  db.py  handlers.py  tg_handlers.py  utils.py
bot/cache/: redis.py  serialization.py
bot/core/: config.py  loader.py
bot/database/: base.py  database.py  user.py
bot/database/models/: __init__.py  base.py  generations.py  mood.py  user.py
bot/instruction_templates/: Alpaca.yaml
bot/services/: generations.py  moods.py  users.py
bot/tg/: __init__.py  __main__.py  keyboards_tg.py  tg_handlers.py  tg_middlewares.py
bot/vk/: __init__.py  __main__.py  keyboards_vk.py  vk_handlers.py  vk_middlewares.py
migrations/: env.py
migrations/versions/: 1942f7dcbe69_model_id_as_string.py  62a9741b9269_initial.py  6d326f6afa01_add_generations_model.py  8ab5d2223882_initial.py
src/: ai_stuff.py  base.py  config.py  constants.py  db.py  handlers.py  keyboards.py  keyboards_tg.py  main.py  moods.json  run_tg.py  run_vk.py  tg_handlers.py  utils.py  vk_handlers.py  vk_middlewares.py
src/core/: loader.py
src/database/models/: base.py  user.py
src/instruction_templates/: Llama-v3.yaml  Vicuna-v1.1.yaml
src/services/: users.py
src/vk/: vk_handlers.py  vk_middlewares.py
